// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-app-fit destination: track action - all fields 1`] = `
Object {
  "eventSource": "segment",
  "occurredAt": "2021-02-01T00:00:00.000Z",
  "payload": Object {
    "anonymousId": "m]^ldlwPRQruDQ&OXR1",
    "eventName": "m]^ldlwPRQruDQ&OXR1",
    "properties": Object {
      "testType": "m]^ldlwPRQruDQ&OXR1",
    },
    "sourceEventId": "m]^ldlwPRQruDQ&OXR1",
    "systemProperties": Object {
      "appVersion": "m]^ldlwPRQruDQ&OXR1",
      "device": Object {
        "advertisingId": "m]^ldlwPRQruDQ&OXR1",
        "id": "m]^ldlwPRQruDQ&OXR1",
        "manufacturer": "m]^ldlwPRQruDQ&OXR1",
        "model": "m]^ldlwPRQruDQ&OXR1",
      },
      "ipAddress": "m]^ldlwPRQruDQ&OXR1",
      "os": Object {
        "name": "m]^ldlwPRQruDQ&OXR1",
        "version": "m]^ldlwPRQruDQ&OXR1",
      },
    },
    "userId": "m]^ldlwPRQruDQ&OXR1",
    "version": "2",
  },
}
`;

exports[`Testing snapshot for actions-app-fit destination: track action - required fields 1`] = `
Object {
  "eventSource": "segment",
  "occurredAt": "2021-02-01T00:00:00.000Z",
  "payload": Object {
    "eventName": "m]^ldlwPRQruDQ&OXR1",
    "sourceEventId": "m]^ldlwPRQruDQ&OXR1",
    "systemProperties": Object {
      "device": Object {},
      "os": Object {},
    },
    "version": "2",
  },
}
`;
